Overflowing content fixes

--- a/src/Components/RecipeCard/RecipeCard.module.css
+++ b/src/Components/RecipeCard/RecipeCard.module.css
@@ -106,10 +106,14 @@
   font-size: 1.6rem;
   font-weight: 800;
   letter-spacing: -0.3px;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: 1.2;
 }
+
 
 
 .badges {
@@ -203,9 +207,18 @@
 }
 
 .description {
-  margin: 1rem 0 1rem 0;
+  margin: 1.25rem 0;
   color: var(--text);
+  font-size: 0.95rem;
+  line-height: 1.5;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
 }
+
 
 .statsRow {
   display: grid;
